--- a/style.css
+++ b/style.css
@@ -285,3 +285,36 @@ footer {
     font-size: 0.9rem;
     z-index: 5;
 }
+
+
+@media (max-width: 480px) {
+
+    /* Butonlar arasındaki boşluğu azalt */
+    .controls {
+        gap: 10px; 
+    }
+
+    #show-question-btn, #start-answer-btn, #get-letter-btn {
+        width: 75px;
+        height: 75px;
+        font-size: 0.8rem; /* Yazı tipini küçült */
+        line-height: 1.1;
+    }
+
+    #special-button-container {
+        width: 75px;
+        height: 75px;
+    }
+    
+    #answer-timer-display {
+        font-size: 2rem;
+    }
+
+    header h1 {
+        font-size: 2rem;
+    }
+
+    .stat-box .value {
+        font-size: 1.5rem;
+    }
+}
