--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ header h1 {    font-weight: 900;    font-size: 2.5rem;    color: var(--text-yell
 .letter-container {    display: flex;    justify-content: center;     gap: 15px;    margin-bottom: 30px;    min-height: 80px;    flex-wrap: nowrap;
     overflow-x: auto;    padding-bottom: 15px;}
 
-.hexagon {    position: relative;    width: 70px;    height: 80.83px;    background-color: #fff;    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+.hexagon {    position: relative;    flex-grow: 0;            flex-shrink: 1;         flex-basis: 70px;        max-width: 70px;          
+    height: 80.83px;     background-color: #fff;    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
     display: flex;    justify-content: center;    align-items: center;    transition: transform 0.2s ease;}
 
 .hexagon .letter {    font-size: 2.5rem;    font-weight: 900;    color: var(--primary-bg);}
